# bcl

./: .clang-format  .clang_complete  .cproject  .gitattributes  .gitignore  .project  .pydevproject  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILING.md  CONTRIBUTING.md  LICENSE  README.md  bcl.external.settings  bcl_externals.cmake  bcl_package.cmake  bcl_runtime_libraries.cmake  bcl_source.cpp  bcl_version.cmake
apps/: CMakeLists.txt  apps.cpp
apps/descriptor/: CMakeLists.txt  bcl_app_descriptor_analyze.cpp  bcl_app_descriptor_analyze.h  bcl_app_descriptor_convert_code_object_file.cpp  bcl_app_descriptor_convert_code_object_file.h  bcl_app_descriptor_dataset_similarity_measures.cpp  bcl_app_descriptor_generate_dataset.cpp  bcl_app_descriptor_generate_dataset.h  bcl_app_descriptor_generate_pca_eigenvectors.cpp  bcl_app_descriptor_refine_by_score.cpp  bcl_app_descriptor_refine_by_score.h  bcl_app_descriptor_score_dataset.cpp  bcl_app_descriptor_score_dataset.h  bcl_app_descriptor_sequential_feature_selection.cpp  bcl_app_descriptor_sequential_feature_selection.h
apps/model/: CMakeLists.txt  bcl_app_model_compute_statistics.cpp  bcl_app_model_compute_statistics.h  bcl_app_model_prediction_merge.cpp  bcl_app_model_prediction_merge.h  bcl_app_model_test.cpp  bcl_app_model_test.h  bcl_app_model_test_ann_with_dropout_resampling.cpp  bcl_app_model_test_ann_with_dropout_resampling.h  bcl_app_model_train.cpp  bcl_app_model_train.h
apps/molecule/: CMakeLists.txt  bcl_app_align_to_scaffold.cpp  bcl_app_align_to_scaffold.h  bcl_app_conformer_from_scaffold.cpp  bcl_app_conformer_from_scaffold.h  bcl_app_evolutionary_generator.cpp  bcl_app_extract_mcs.cpp  bcl_app_extract_mcs.h  bcl_app_focused_library_design.cpp  bcl_app_generate_partial_charges_file.cpp  bcl_app_generate_partial_charges_file.h  bcl_app_generate_rosetta_ncaa_instructions.cpp  bcl_app_generate_rosetta_ncaa_instructions.h  bcl_app_make_fld_scaffold.cpp  bcl_app_make_grow_fragments.cpp  bcl_app_map_params.cpp  bcl_app_map_params.h  bcl_app_match_reactions.cpp  bcl_app_molecule_atom_pairwise_potential.cpp  bcl_app_molecule_atom_pairwise_potential.h  bcl_app_molecule_compare.cpp  bcl_app_molecule_compare.h  bcl_app_molecule_coordinates.cpp  bcl_app_molecule_coordinates.h  bcl_app_molecule_extract_protein_pocket.cpp  bcl_app_molecule_extract_protein_pocket.h  bcl_app_molecule_features.cpp  bcl_app_molecule_features.h  bcl_app_molecule_filter.cpp  bcl_app_molecule_filter.h  bcl_app_molecule_fit.cpp  bcl_app_molecule_minimize.cpp  bcl_app_molecule_minimize.h  bcl_app_molecule_multialign.cpp  bcl_app_molecule_multialign.h  bcl_app_molecule_properties.cpp  bcl_app_molecule_properties.h  bcl_app_molecule_reorder.cpp  bcl_app_molecule_reorder.h  bcl_app_molecule_split.cpp  (+7 more)
apps/release/: CMakeLists.txt  bcl_app_alignment.cpp  bcl_app_alignment.h  bcl_app_cluster.cpp  bcl_app_cluster.h  bcl_app_contact_prediction.cpp  bcl_app_contact_prediction.h  bcl_app_create_sse_pool.cpp  bcl_app_create_sse_pool.h  bcl_app_fit_in_density.cpp  bcl_app_fit_in_density_minimize.cpp  bcl_app_fold.cpp  bcl_app_fusion_protein.cpp  bcl_app_jufo.cpp  bcl_app_jufo.h  bcl_app_optimize.cpp  bcl_app_optimize.h  bcl_app_pdb_compare.cpp  bcl_app_pdb_compare.h  bcl_app_pdb_convert.cpp  bcl_app_protein_docking.cpp  bcl_app_protein_docking.h  bcl_app_score_protein.cpp
apps/restraint/: CMakeLists.txt  bcl_app_analyze_spin_label_parameters.cpp  bcl_app_analyze_spin_label_parameters.h  bcl_app_restraint_pofr.cpp  bcl_app_restraint_pofr.h  bcl_app_restraint_saxs.cpp  bcl_app_restraint_saxs.h  bcl_app_restraint_saxs_prep.cpp  bcl_app_restraint_saxs_prep.h
apps/sequence/: CMakeLists.txt
example/: CMakeLists.txt  bcl_app_examples.cpp  example.cpp  example.h  example_application_example_helper.cpp  example_application_example_helper.h  example_bcl.cpp  example_bcl_version.cpp  example_check_macros.h  example_interface.cpp  example_interface.h  example_proteins.cpp  example_proteins.h
example/align/: CMakeLists.txt  example_align.cpp  example_align_aligner_dp.cpp  example_align_aligner_dynamic_programming.cpp  example_align_aligner_merge.cpp  example_align_aligner_progressive.cpp  example_align_aligner_shift.cpp  example_align_aligner_wordbased.cpp  example_align_alignment_hit.cpp  example_align_alignment_leaf.cpp  example_align_alignment_node.cpp  example_align_alignment_word.cpp  example_align_assignment.cpp  example_align_handler_blc.cpp  example_align_handler_blocked.cpp  example_align_handler_classes.cpp  example_align_handler_fasta.cpp  example_align_handler_pir.cpp  example_align_handler_standard.cpp  example_align_multiple_aligner_classes.cpp  example_align_pairwise_aligner_classes.cpp  example_align_sequence.cpp  example_align_word_generator_high_scoring.cpp  example_align_word_generator_subsequences.cpp
example/apps/: CMakeLists.txt  example_apps.cpp
example/assemble/: CMakeLists.txt  example_assemble.cpp  example_assemble_aa_neighbor_list.cpp  example_assemble_aa_neighbor_list_container.cpp  example_assemble_aa_neighbor_list_container_generator_protein_model.cpp  example_assemble_analyze_chi_angle_pair_distribution.cpp  example_assemble_analyze_chi_angle_recovery.cpp  (+89 more)
source/: CMakeLists.txt  bcl.cpp  bcl_source_align.cpp  bcl_source_app.cpp  bcl_source_assemble.cpp  bcl_source_biol.cpp  bcl_source_bzip2.cpp  bcl_source_cluster.cpp  bcl_source_command.cpp  bcl_source_contact.cpp  bcl_source_coord.cpp  bcl_source_crypt.cpp  bcl_source_density.cpp  bcl_source_find.cpp  bcl_source_fold.cpp  bcl_source_function.cpp  bcl_source_graph.cpp  bcl_source_gzip.cpp  bcl_source_iterate.cpp  bcl_source_linal.cpp  bcl_source_math.cpp  bcl_source_mc.cpp  bcl_source_model.cpp  bcl_source_nmr.cpp  bcl_source_openblas.cpp  bcl_source_opencl.cpp  bcl_source_opti.cpp  bcl_source_pdb.cpp  bcl_source_pthread.cpp  bcl_source_quality.cpp  bcl_source_random.cpp  bcl_source_restraint.cpp  bcl_source_sched.cpp  bcl_source_score.cpp  bcl_source_scorestat.cpp  bcl_source_sdf.cpp  bcl_source_signal.cpp  bcl_source_storage.cpp  bcl_source_type.cpp  bcl_source_util.cpp  (+1 more)
(+8128 files in other folders)
