CMAKE_MINIMUM_REQUIRED( VERSION 2.8.8)

SET( LIBRARY_NAME bclappsrelease)
SET( LIBRARY_OBJECTS ${LIBRARY_NAME}-objects)
SET( LIBRARY_OBJECTS_REST ${LIBRARY_NAME}-rest-objects)
PROJECT( lib${LIBRARY_NAME})

SET(
  LIBRARY_SOURCES_REST
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_alignment.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_cluster.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_contact_prediction.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_create_sse_pool.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_fit_in_density.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_fit_in_density_minimize.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_fold.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_fusion_protein.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_jufo.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_optimize.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_pdb_compare.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_pdb_convert.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_protein_docking.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_score_protein.cpp
)

SET(
	LIBRARY_SOURCES
	${LIBRARY_SOURCES_REST}
)
MACRO_CHECK_CMAKE_DIRECTORY_LIST( ${CMAKE_CURRENT_SOURCE_DIR} "${LIBRARY_SOURCES}")

ADD_LIBRARY( ${LIBRARY_OBJECTS_REST} OBJECT ${LIBRARY_SOURCES_REST})

IF( LINK_NAMESPACE_ARCHIVES)
	ADD_LIBRARY( ${LIBRARY_NAME} STATIC $<TARGET_OBJECTS:${LIBRARY_OBJECTS_REST}>)
ENDIF()

SET( SUBDIRECTORY_LIBRARY_NAME ${LIBRARY_NAME} PARENT_SCOPE)
SET( SUBDIRECTORY_LIBRARY_OBJECTS $<TARGET_OBJECTS:${LIBRARY_OBJECTS_REST}> PARENT_SCOPE)
SET( LIBRARY_APPS_RELEASE ${LIBRARY_NAME} PARENT_SCOPE)
SET( OBJECTS_APPS_RELEASE $<TARGET_OBJECTS:${LIBRARY_OBJECTS_REST}> PARENT_SCOPE)
