CMAKE_MINIMUM_REQUIRED( VERSION 2.8.8)

SET( LIBRARY_NAME bclappsrestraint)
SET( LIBRARY_OBJECTS ${LIBRARY_NAME}-objects)
PROJECT( lib${LIBRARY_NAME})

SET(
  LIBRARY_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_analyze_spin_label_parameters.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_restraint_pofr.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_restraint_saxs.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/bcl_app_restraint_saxs_prep.cpp
)
MACRO_CHECK_CMAKE_DIRECTORY_LIST( ${CMAKE_CURRENT_SOURCE_DIR} "${LIBRARY_SOURCES}")

ADD_LIBRARY( ${LIBRARY_OBJECTS} OBJECT ${LIBRARY_SOURCES})

IF( LINK_NAMESPACE_ARCHIVES)
  ADD_LIBRARY( ${LIBRARY_NAME} STATIC $<TARGET_OBJECTS:${LIBRARY_OBJECTS}>)
ENDIF()

SET( SUBDIRECTORY_LIBRARY_NAME ${LIBRARY_NAME} PARENT_SCOPE)
SET( SUBDIRECTORY_LIBRARY_OBJECTS $<TARGET_OBJECTS:${LIBRARY_OBJECTS}> PARENT_SCOPE)
